--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "google-cloud-secret-manager>=2.24.0",
     "pydantic>=2.11.7",
     "pydantic-settings>=2.10.1",
+    "python-json-logger>=4.0.0",
 ]
 
 [dependency-groups]
